# DIPaCUS

./: .gitignore  .travis.yaml  CMakeLists.txt  Dockerfile  Doxyfile  INSTALL.txt  README.md  dependencies.txt
.travis/: build-dipacus.sh  test-dipacus.sh
doc/html/: Misc_8h.html  Misc_8h_source.html  Misc_8hpp.html  Misc_8hpp_source.html  Morphology_8h.html  Morphology_8h_source.html  Neighborhood_8h.html  Neighborhood_8h_source.html  Neighborhood_8hpp.html  Neighborhood_8hpp_source.html  Objects_8h.html  Objects_8h_source.html  Properties_8h.html  Properties_8h_source.html  Properties_8hpp.html  Properties_8hpp_source.html  Representation_8cpp.html  Representation_8h.html  Representation_8h_source.html  SetOperations_8h.html  SetOperations_8h_source.html  Transform_8h.html  Transform_8h_source.html  annotated.html  classDIPaCUS_1_1DigitalBallIntersection-members.html  classDIPaCUS_1_1DigitalBallIntersection.html  classDIPaCUS_1_1DigitalRectangle-members.html  classDIPaCUS_1_1DigitalRectangle.html  classDIPaCUS_1_1EightNeighborhoodPredicate-members.html  classDIPaCUS_1_1EightNeighborhoodPredicate.html  classDIPaCUS_1_1FourNeighborhoodPredicate-members.html  classDIPaCUS_1_1FourNeighborhoodPredicate.html  classDIPaCUS_1_1Misc_1_1DigitalBallIntersection-members.html  classDIPaCUS_1_1Misc_1_1DigitalBallIntersection.html  classDIPaCUS_1_1Neighborhood_1_1EightNeighborhoodPredicate-members.html  classDIPaCUS_1_1Neighborhood_1_1EightNeighborhoodPredicate.html  classDIPaCUS_1_1Neighborhood_1_1FourNeighborhoodPredicate-members.html  classDIPaCUS_1_1Neighborhood_1_1FourNeighborhoodPredicate.html  classDIPaCUS_1_1Objects_1_1DigitalRectangle-members.html  classDIPaCUS_1_1Objects_1_1DigitalRectangle.html  (+142 more)
doc/latex/: Misc_8h.tex  Misc_8hpp.tex  Morphology_8h.tex  Neighborhood_8h.tex  Neighborhood_8hpp.tex  Objects_8h.tex  Properties_8h.tex  Properties_8hpp.tex  Representation_8cpp.tex  Representation_8h.tex  SetOperations_8h.tex  Transform_8h.tex  annotated.tex  classDIPaCUS_1_1DigitalBallIntersection.tex  classDIPaCUS_1_1DigitalRectangle.tex  classDIPaCUS_1_1EightNeighborhoodPredicate.tex  classDIPaCUS_1_1FourNeighborhoodPredicate.tex  classDIPaCUS_1_1Misc_1_1DigitalBallIntersection.tex  classDIPaCUS_1_1Neighborhood_1_1EightNeighborhoodPredicate.tex  classDIPaCUS_1_1Neighborhood_1_1FourNeighborhoodPredicate.tex  classDIPaCUS_1_1Objects_1_1DigitalRectangle.tex  dir_0af1587c8378955de40f48b4bd1869f0.tex  dir_107e309f9f293897177ec4de6cf5a764.tex  dir_12564aff4641fe1bbf162c4b729ba363.tex  dir_138482bae5b90ece6a52c23ef0334796.tex  dir_2b62a22b82aac776549c15514a2aafcf.tex  dir_2f2008d4d148cc8f53104856367be947.tex  dir_4db9abc35df65d934d8c500a37a320ea.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_747e4ed305ed52101274c449c3713876.tex  dir_7c08a1cade60435396907d888d0c191d.tex  dir_802620cab0352fe36d1b68b619988786.tex  dir_83c8b58d3d1f63b781fdfd35f4f26b90.tex  (+71 more)
dox/: mainpage.dox  style-rules.txt
lab/test/: CMakeLists.txt
lab/test/base/: CMakeLists.txt  testBase.cpp
lab/test/base/include/: testRepresentation.h
lab/test/base/include/Representation/: data.h  testRepresentation.h
lab/test/base/include/Representation/utils/: boundingBox.h  boundingBox.hpp
lab/test/base/include/Shapes/: testShapes.h
lab/test/base/src/: testRepresentation.cpp
lab/test/base/src/Representation/: data.cpp  testRepresentation.cpp
lab/test/base/src/Representation/utils/: boundingBox.cpp
lab/test/base/src/Shapes/: testShapes.cpp
lab/test/components/: CMakeLists.txt  testComponents.cpp
lab/test/components/include/: data.h  testMorphology.h  testNeighborhood.h  testNeighborhood.hpp  testProperties.h  testSetOperations.h  testTransform.h
lab/test/components/src/: data.cpp  testMorphology.cpp  testNeighborhood.cpp  testProperties.cpp  testSetOperations.cpp  testTransform.cpp
lab/test/derivates/: CMakeLists.txt  testDerivates.cpp
lab/test/derivates/include/: data.h  testCompactSetFromClosedCurve.h  testComputeBoundaryCurve.h  testMisc.h
lab/test/derivates/input_images/: square_one_pixel_concavity.pgm  square_potential_hole.pgm  square_shorts.pgm
lab/test/derivates/src/: data.cpp  testComputeBoundaryCurve.cpp  testMisc.cpp
lab/test/logger/: CMakeLists.txt
lab/test/logger/include/logger/: logger.h  logger.hpp
lab/test/logger/src/: logger.cpp
lab/test/utils/: CMakeLists.txt
lab/test/utils/include/utils/: boundingBox.h  boundingBox.hpp  utils.h
lab/test/utils/src/: boundingBox.cpp  utils.cpp
modules/base/: CMakeLists.txt
modules/base/include/DIPaCUS/base/: Objects.h  Representation.h  Shapes.h  Shapes.hpp
modules/base/include/DIPaCUS/base/shapes/: BeanShape.h  WaveShape.h
modules/base/src/: Objects.cpp  Representation.cpp  Shapes.cpp
modules/base/src/shapes/: BeanShape.cpp  WaveShape.cpp
modules/base/test/: CMakeLists.txt  main.cpp
modules/base/test/include/: testRepresentation.h
modules/base/test/input_images/: square.pgm
modules/base/test/src/: testRepresentation.cpp
modules/components/: CMakeLists.txt
modules/components/include/DIPaCUS/components/: Morphology.h  Neighborhood.h  Neighborhood.hpp  Properties.h  Properties.hpp  SetOperations.h  Transform.h
modules/components/include/DIPaCUS/components/auxiliar/properties/: boundingBox.h
modules/components/include/DIPaCUS/components/intern/properties/boundingBox/: adapter.h  adapter.hpp  pointFilter.h
modules/components/include/DIPaCUS/components/properties/: boundingBox.h  boundingBox.hpp
modules/components/src/: Morphology.cpp  Neighborhood.cpp  Properties.cpp  SetOperations.cpp  Transform.cpp
modules/components/src/intern/properties/boundingBox/: adapter.cpp
modules/components/src/properties/: boundingBox.cpp
modules/components/test/: CMakeLists.txt
modules/derivates/: CMakeLists.txt
modules/derivates/include/DIPaCUS/derivates/: Misc.h  Misc.hpp
modules/derivates/src/: Misc.cpp
modules/derivates/test/: CMakeLists.txt  testDerivates.cpp
modules/derivates/test/include/: testCompactSetFromClosedCurve.h  testMisc.h
modules/derivates/test/src/: testCompactSetFromClosedCurve.cpp  testMisc.cpp
(+69 files in other folders)
